# grabby

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  flake.nix  result
.github/workflows/: build.yaml  checks.yaml  docker.yaml  mirror.yaml  nix.yaml  update-flake.yaml
nix/: docker.nix  module.nix  package.nix  shell.nix
src/: main.rs
src/bot/: discord.rs  mod.rs
src/config/: mod.rs
src/media/: downloader.rs  gallery_dl.rs  mod.rs  resize.rs  types.rs  utils.rs  ytdlp.rs
src/utils/: mod.rs
