[package]
name = "grabby"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-cache-inmemory = "0.16.0"
twilight-standby = "0.16.0"
yt-dlp = "1.3.4"

[dependencies.uuid]
version = "1.0"
features = ["v4"]
