[package]
name = "grabby"
version = "0.1.9"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.13", features = ["json"] }
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-cache-inmemory = "0.17"
twilight-standby = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
url = "2.5"
twilight-util = { version = "0.17", features = ["builder"] }
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
tempfile = "3.0"
